--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,10 @@ body {
     padding-top: 50px; /* Padding for .navbar-fixed-top. Change value if navbar height changes. Remove if using .navbar-static-top. */
 }
 
+.logo{
+  padding-top:10px;
+}
+
 .portfolio-item {
     margin-bottom: 25px;
 }
@@ -30,11 +34,11 @@ body {
 .footer-blurb h3 {
     color: midnightblue;
     }
-    
+
 .footer-blurb-item {
     padding: 30px 0;
     }
- 
+
 .copyright {
 	background-color: #fff;
 	text-align: center;
