Navbar font increased

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,9 @@ body {
     padding-top: 50px; /* Padding for .navbar-fixed-top. Change value if navbar height changes. Remove if using .navbar-static-top. */
 }
 
+.navbar {
+  font-size: 17px;
+}
 .logo{
   padding-top:10px;
 }
