--- a/css/custom.css
+++ b/css/custom.css
@@ -56,7 +56,7 @@ body {
     padding-top:50px;
     clear:both;
 }
-.item .small, .item .small_enlargeable{
+.item .small, .item .small_enlargeable, .item .small2{
     float:left;
     padding:10px;
     margin-right:20px;
@@ -65,6 +65,9 @@ body {
 }
 .item .small img {
   width:100%
+}
+.item .small2 img {
+  width:240px
 }
 .item .small_enlargeable:hover {
     width:330px;
@@ -75,9 +78,15 @@ body {
 .item .description {
     margin-left:180px;
 }
-.item .title {
-    font-size: 18px;
+.item .description2 {
+    margin-left:300px;
 }
+
+.item .title2 {
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .item .bigtitle {
     font-size: 22px;
     padding:5px;
