--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,6 @@
     .illustration{float:right;margin-left:10px;margin-bottom:10px;border:none;width:280px; clear:both}
-    .abstract{padding-left:15px;text-align:justify}
+    .abstract{padding-left:15px;text-align:}
 p{
-    text-align:justify
 }
 .break{height:20px;clear:both}
 .break-an{height:50px;}
